--- a/styles/index.css
+++ b/styles/index.css
@@ -3,12 +3,18 @@
   font-weight: 200;
 }
 
-body {
-  --text-color: #222;
-  --bkg-color: #fff;
+body.dark-mode {
+  --text-color: #eee;
+  --bkg-color: #121212;
   color: var(--text-color);
   background: var(--bkg-color);
-  transition: 0.2s;
+}
+
+body.light-mode {
+  --text-color: #121212;
+  --bkg-color: #eee;
+  color: var(--text-color);
+  background: var(--bkg-color);
 }
 
 .formulario {
@@ -22,7 +28,7 @@ body {
   font-weight: 400;
   float: left;
   font-size: 35px;
-  border-bottom: 3px solid #6666ff;
+  border-bottom: 1px solid #6666ff;
   margin-bottom: 0 0 50px;
   padding: 1px 0;
 }
@@ -30,7 +36,7 @@ body {
 .formulario input {
   color: var(--text-color);
   border: none;
-  border-bottom: 3px solid #6666ff;
+  border-bottom: 1px solid #6666ff;
   outline: none;
   background: none;
   font-size: 18px;
@@ -39,24 +45,10 @@ body {
   margin: 0 1px 10px;
 }
 
-.formulario button {
-  color: var(--text-color);
+.formulario button{
   width: 100%;
-  background: none;
-  border: 2px solid #6666ff;
-  padding: 5px;
-  font-size: 18px;
-  cursor: pointer;
-  margin: 2px 0;
-  transition: 0.3s;
 }
 
-.formulario button:hover {
-  background-color: #6666ff;
-}
-
-body.dark-mode {
-  --text-color: #eee;
-  --bkg-color: #121212;
-  transition: 0.2s;
+body button{
+  float: right;
 }
