--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -37,6 +37,7 @@ body.light-mode {
     box-shadow: 10px 5px 20px black;
     border-radius: 10px;
     max-width: 500px;
+    max-height: 600px;
     overflow: hidden;
 }
 
